--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		</h4>
 
 		<span>
-		<img src="images/kw.jpg" class="face-circle" alt="Katherine">
+		<img src="public/images/kw.jpg" class="face-circle" alt="Katherine">
 		</span>	
 	</div>
 
