Updated with Henry

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<link href='https://fonts.googleapis.com/css?family=Hind+Siliguri' rel='stylesheet'>
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 </head>
 <!-- **********************************************HEAD****** --> 
 <body>
@@ -30,11 +29,11 @@
 			<a href="https://github.com/KatherineWorley">GitHub</a>
 			<a href="https://twitter.com/worleykatherine">Twitter</a>
 			<a href="mailto:me@katherineworley.com?Subject=Hello%20There!" target="_top">Send Mail</a>
-			<a href="tel:813-922-8437"><img src="path/to/phone/icon.jpg" />Call</a>
+			<a href="tel:813-922-8437">Call</a>
 		</h4>
 
 		<span>
-		<img src="public/images/kw.jpg" class="face-circle" alt="Katherine">
+		<img src="/images/kw.jpg" class="face-circle" alt="Katherine">
 		</span>	
 	</div>
 
