--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</h4>
 
 		<span>
-		<img src="images/kw.jpg" class="face-circle" alt="Katherine">
+		<img src="/images/kw.jpg" class="face-circle" alt="Katherine">
 		</span>	
 	</div>
 
